--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 h1 {
     align-self: center;
     justify-self: center;
-    font-size: 3cqw;
+    font-size: 4cap;
     font-family: cursive;
 }
 
